<resources>
    <string name="app_name">Bitcoin Explorer</string>
    <string name="no_internet_connection">Нет соединения с интернетом</string>

    <!-- info fragment -->
    <string name="btc_price">%.2f $</string>
    <string name="blocks">%1d\nблоков</string>
    <string name="info_transactions">%1d\nтранзакций</string>
    <string name="addresses">%1d\nадресов</string>
    <string name="suggested_transaction_fee_per_byte_sat">Рекомендуемая комиссия: </string>
    <string name="fee_format" translatable="false">%1d sat/byte</string>
    <string name="text_spark" translatable="false">%.2f $ %s</string>

    <!-- transaction fragment -->
    <string name="hash">Хэш</string>
    <string name="paste">Вставить</string>
    <string name="unavailable">Не подтверждена</string>
    <string name="available">Подтверждена</string>
    <string name="time">Время:</string>
    <string name="size">Размер:</string>
    <string name="data_size">%1d байт</string>
    <string name="weight">Вес:</string>
    <string name="status_transaction">Статус:</string>
    <string name="fee">Комиссия:</string>
    <string name="num_block">Номер блока:</string>
    <string name="inputs">Входы</string>
    <string name="outputs">Выходы</string>
    <string name="address_name">Адрес:</string>
    <string name="price_name">"Стоимость:"</string>
    <string name="witness_name">Witness:</string>
    <string name="script">"Script:"</string>
    <string name="copy_description">Копировать</string>
    <string name="price_transaction" translatable="false">%1f BTC</string>
    <string name="general_input">Общий вход:</string>
    <string name="general_out">Общий выход:</string>
    <string name="hash_error">Введите правильный хэш</string>

    <string name="balance_addr">Баланс:</string>
    <string name="total_received">Всего принял:</string>
    <string name="total_sent">Всего отправил:</string>
    <string name="total_transactions">Транзакции:</string>
    <string name="addr_transactions">Транзакции</string>
    <string name="address_error">Введите правильный адрес</string>
    <string name="address">Адрес</string>

    <!-- descriptions -->
    <string name="description_btc" translatable="false">logo btc</string>
    <string name="description_blocks" translatable="false">blocks icon</string>
    <string name="description_transactions" translatable="false">transactions icon</string>
    <string name="description_addresses" translatable="false">addresses icon</string>

    <string name="too_many_requests">Слишком много запросов</string>
    <string name="transaction_volume">Объем транзакций:</string>
    <string name="height">Высота:</string>
    <string name="weight_format" translatable="false">%1d WU</string>
    <string name="byte_format" translatable="false">%1d bytes</string>
    <string name="reward">Вознаграждение за блок:</string>
    <string name="miner">Майнер:</string>
    <string name="hash_or_num">Хэш/номер</string>
    <string name="latest_transactions">Последние транзакции</string>
    <string name="block_hash">Хэш:</string>
    <string name="search_hint">Блок, транзакция, адрес</string>
    <string name="invalid_search">Ничего не нашлось</string>

</resources>